--- a/suap_oauth/templates/user.html
+++ b/suap_oauth/templates/user.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>{% block title %} {{ user_data['nome_usual'] }} {% endblock %}</h2>
-    <img src="https://suap.ifrn.edu.br{{ user_data['url_foto_150x200'] }}" alt="foto">
+    <img src="{{ user_data['url_foto_150x200'] }}" alt="foto">
 
     {% for field in user_data %}
 
